--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
 DB=mongodb+srv://root:r9kgzDYJ9ACQKxEu@cluster0.ndelv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+SECRETKEY=iamgonnabethekingofthepirates
