--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "start":"node dist/index.js",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Farooq Khan",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.0",
     "nodemon": "^3.1.9",
@@ -18,8 +19,13 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.6"
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.6",
+    "nodemailer": "^6.10.0",
+    "zod": "^3.24.1"
   }
 }
