--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=5000
 DB=mongodb+srv://root:r9kgzDYJ9ACQKxEu@cluster0.ndelv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 SECRETKEY=iamgonnabethekingofthepirates
+EMAIL=smaster.mailer@gmail.com
+PASS=lywyacywrvxwvwbb
