--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB=mongodb+srv://root:r9kgzDYJ9ACQKxEu@cluster0.ndelv.mongodb.net/?retryWrites=t
 SECRETKEY=iamgonnabethekingofthepirates
 EMAIL=smaster.mailer@gmail.com
 PASS=lywyacywrvxwvwbb
+DOMAIN=localhost:5000
