--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ SECRETKEY=iamgonnabethekingofthepirates
 EMAIL=smaster.mailer@gmail.com
 PASS=lywyacywrvxwvwbb
 DOMAIN=localhost:5000
+AWS_ACCESS_KEY_ID=AKIARVKLGTA4MFR6UDKH
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=ap-south-1
+AWS_BUCKET_NAME=smaster-storage
