--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.744.0",
     "@aws-sdk/lib-storage": "^3.744.0",
+    "axios": "^1.8.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "form-data": "^4.0.2",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "zod": "^3.24.1"
   }
