--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 PORT=5000
-DB=mongodb+srv://root:r9kgzDYJ9ACQKxEu@cluster0.ndelv.mongodb.net/SMaster?retryWrites=true&w=majority&appName=Cluster0
-SECRETKEY=iamgonnabethekingofthepirates
-EMAIL=smaster.mailer@gmail.com
-PASS=lywyacywrvxwvwbb
+DB=your_db_link
+SECRETKEY=your_secret_key
+EMAIL=your_mail
+PASS=your_password
 DOMAIN=localhost:5000
-AWS_ACCESS_KEY_ID=AKIARVKLGTA4MFR6UDKH
-AWS_SECRET_ACCESS_KEY=sMtaKdANmEjcSl+r6Q5hV1E2avQAo6SOTgrhSldm
+AWS_ACCESS_KEY_ID=YOUR_ACCESS_KEY
+AWS_SECRET_ACCESS_KEY=YOUR_SECRET_KEY
 AWS_REGION=ap-south-1
 AWS_BUCKET_NAME=smaster-storage
